--- a/style.css
+++ b/style.css
@@ -15,6 +15,6 @@
 }
 
 /* Hide pinned topics */
-#Main > div:nth-child(2) > div[style*="background"] {
+#Main > div:nth-child(2) > div[style*="corner"] {
   display: none;
 }
