--- a/hide-profile-photo.css
+++ b/hide-profile-photo.css
@@ -11,7 +11,12 @@
 }
 
 /* 评论区头像 */
-#Main .normalUser > table > tbody > tr > td:nth-child(1),
-#Main .keyUser > table > tbody > tr > td:nth-child(1) {
+#Main
+  > div:nth-child(4)
+  > div.cell
+  > table
+  > tbody
+  > tr
+  > td:nth-child(1)[align="center"] {
   display: none;
 }
