--- a/test.css
+++ b/test.css
@@ -1,4 +1,9 @@
 #Main .box a.node {
-  background-color: #1ba784;
-  color: #fff;
+background-color: #f5f5f5;
+color: #1ba784;
+}
+
+#Main > div:nth-child(2) > div > table > tbody > tr > td:nth-child(3) {
+display: flex;
+flex-direction: column-reverse;
 }
