--- a/test.css
+++ b/test.css
@@ -7,3 +7,7 @@ color: #1ba784;
 display: flex;
 flex-direction: column-reverse;
 }
+
+#Main > div:nth-child(2) > div.cell {
+  border-bottom: 5px solid var(--box-border-color);
+}
