--- a/hide-profile-photo.css
+++ b/hide-profile-photo.css
@@ -1,6 +1,12 @@
 /* 主题列表头像 */
-#Main > div:nth-child(2) > div.item > table > tbody > tr > td:nth-child(1),
-#Main > div:nth-child(2) > div.item > table > tbody > tr > td:nth-child(2) {
+#Main > div:nth-child(2) > div.item > table > tbody > tr > td:nth-last-child(3),
+#Main
+  > div:nth-child(2)
+  > div.item
+  > table
+  > tbody
+  > tr
+  > td:nth-last-child(4) {
   display: none;
 }
 
