--- a/test.css
+++ b/test.css
@@ -1,11 +1,12 @@
+/* Node name */
 #Main .box a.node {
-background-color: #f5f5f5;
-color: #1ba784;
+  background-color: #f5f5f5;
+  color: #1ba784;
 }
 
-#Main > div:nth-child(2) > div > table > tbody > tr > td:nth-child(3) {
-display: flex;
-flex-direction: column-reverse;
+#Main > div:nth-child(2) > div.item > table > tbody > tr > td:nth-child(3) {
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 #Main > div:nth-child(2) > div.cell {
