--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   display: none !important;
 }
 
+/* Ad images */
+#Rightbar div.inner > a > img,
+#Rightbar div.inner > div > a > img {
+  display: none;
+}
+
 #Tabs > a:nth-child(4),
 #Tabs > a:nth-child(5),
 #Tabs > a:nth-child(6),
