--- a/sticky-header.css
+++ b/sticky-header.css
@@ -4,9 +4,19 @@
   background-color: white;
 }
 
+#Top .content {
+  max-width: unset !important;
+  width: 100% !important;
+}
+
+.site-nav .tools {
+  flex: unset;
+}
+.site-nav a[name="top"] {
+  margin-right: auto;
+}
+
 #Tabs {
-  position: sticky;
-  top: 52px;
-  border-top: 1px solid var(--box-border-color);
-  box-shadow: 0 2px 3px rgb(0 0 0 / 10%);
+  position: fixed;
+  top: -1px;
 }
