--- a/style.css
+++ b/style.css
@@ -1,26 +1,5 @@
-.wwads-cn {
-  display: none !important;
-}
-
-/* Ad images */
-#Rightbar div.inner > a > img,
-#Rightbar div.inner > div > a > img {
-  display: none;
-}
-
-#Tabs > a:nth-child(4),
-#Tabs > a:nth-child(5),
-#Tabs > a:nth-child(6),
-#Tabs > a:nth-child(7),
-#Tabs > a:nth-child(13) {
-  display: none;
-}
-
-#Tabs > a {
-  min-width: 3.5em;
-}
-
-/* Hide pinned topics */
-#Main > div:nth-child(2) > div[style*="corner"] {
-  display: none;
-}
+@import "no-ads.css";
+@import "sticky-header.css";
+@import "enhance-node-name.css";
+@import "hide-profile-photo.css";
+@import "minimalist.css";
