--- a/enhance-node-name.css
+++ b/enhance-node-name.css
@@ -1,14 +1,20 @@
+/**
+ * 节点显示增强
+ */
+
 /* Node name */
 #Main .box a.node {
   background-color: #f5f5f5;
   color: #1ba784;
 }
 
-#Main > div:nth-child(2) > div.item > table > tbody > tr > td:nth-child(3) {
+/* 节点，用户名显示在标题上面 */
+td:has(> .topic_info) {
   display: flex;
   flex-direction: column-reverse;
 }
 
-#Main > div:nth-child(2) > div.cell {
+/* 增加主题间的间距 */
+div.cell:has(.topic_info) {
   border-bottom: 5px solid var(--box-border-color);
 }
