--- a/hide-profile-photo.css
+++ b/hide-profile-photo.css
@@ -1,28 +1,16 @@
 /* 主题列表头像 */
-#Main > div:nth-child(2) > div.item > table > tbody > tr > td:nth-last-child(3),
-#Main
-  > div:nth-child(2)
-  > div.item
-  > table
-  > tbody
-  > tr
-  > td:nth-last-child(4) {
-  display: none;
-}
-
-/* 右侧列表头像 */
-#my-recent-topics table > tbody > tr > td:nth-child(1),
-#TopicsHot table > tbody > tr > td:nth-child(1) {
-  display: none;
+td:has(> a > img.avatar),
+td:has(> a > img.avatar) + td {
+  display: none !important;
 }
 
 /* 评论区头像 */
-#Main
-  > div:nth-child(4)
-  > div.cell
-  > table
-  > tbody
-  > tr
-  > td:nth-child(1)[align="center"] {
-  display: none;
+td:has(> img.avatar),
+td:has(> img.avatar) + td {
+  display: none !important;
+}
+
+/* user name*/
+td > strong > .dark {
+  color: #1ba784 !important;
 }
