--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import "no-ads.css";
 @import "sticky-header.css";
+@import "search.css";
 @import "enhance-node-name.css";
 @import "hide-profile-photo.css";
 @import "minimalist.css";
